--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,6 @@
-<div style = 'border: 3px dashed red'>
+<% if @name %>
+<h1>My name is <%= @name %></h1>
+<% end %>
+<div style='border: 3px dashed red'>
   <img src='http://bit.ly/1eze8aE'>
-  <h1> My name is <%= @sample %></h1>
- </div>
+</div>
